--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -17,10 +17,10 @@
         <div class="card-body">
           <h5 class="card-title">{{subject.name}}</h5>
           <p class="card-text">{{subject.intro}}</p>
-          <a href="/nav/read" class="btn btn-warning btn-sm">导航</a>
+          <a :href="'/nav/subject/'+subject.id" class="btn btn-warning btn-sm">导航</a>
           <a href="/cheat/read" class="btn btn-warning btn-sm">速查</a>
           <a href="/card/read" class="btn btn-warning btn-sm">卡片</a>
-          <a href="/article/read" class="btn btn-warning btn-sm">文章</a>
+          <a href="/article/list" class="btn btn-warning btn-sm">文章</a>
           <div class="btn-group float-right">
             <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               设置
