--- a/src/main/resources/templates/nav/read.html
+++ b/src/main/resources/templates/nav/read.html
@@ -8,7 +8,7 @@
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
         <a class="navbar-brand">主题导航</a>
-        <botton class="btn btn-warning btn-sm">新建导航</botton>
+        <botton class="btn btn-warning btn-sm" data-toggle="modal" data-target="#newModal">新建导航</botton>
       </nav>
       <div style="padding-bottom:15px;">
         <button v-for="" type="button" class="btn btn-link">Link</button>
@@ -29,17 +29,17 @@
               <form>
                 <div class="form-group">
                   <label for="recipient-name" class="col-form-label">导航名称:</label>
-                  <input type="text" class="form-control" id="recipient-name" v-model="title">
+                  <input type="text" class="form-control" id="recipient-name">
                 </div>
                 <div class="form-group">
                   <label for="message-text" class="col-form-label">导航链接:</label>
-                  <textarea class="form-control" id="message-text" v-model="url"></textarea>
+                  <textarea class="form-control" id="message-text"></textarea>
                 </div>
               </form>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
-              <button type="button" class="btn btn-primary btn-sm" @click="add">保存</button>
+              <button type="button" class="btn btn-primary btn-sm">保存</button>
             </div>
           </div>
         </div>
