--- a/src/main/resources/templates/nav/read.html
+++ b/src/main/resources/templates/nav/read.html
@@ -7,44 +7,10 @@
   <div class="row" style="margin-top:150px;" id="app">
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
-        <a class="navbar-brand">主题导航</a>
-        <botton class="btn btn-warning btn-sm" data-toggle="modal" data-target="#newModal">新建导航</botton>
+        <a class="navbar-brand" th:text="'主题导航（' + ${subject.name} + '）'" th:attr="subjectId=${subject.id}" id="subjectId">主题导航</a>
+        <a role="botton" th:href="'/nav/edit/subject/'+${subject.id}" class="btn btn-warning btn-sm">编辑</a>
       </nav>
-      <div style="padding-bottom:15px;">
-        <button v-for="" type="button" class="btn btn-link">Link</button>
-      </div>
-
-      <!---->
-      <!-- Modal -->
-      <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="">新建导航</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="col-form-label">导航名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
-                </div>
-                <div class="form-group">
-                  <label for="message-text" class="col-form-label">导航链接:</label>
-                  <textarea class="form-control" id="message-text"></textarea>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
-              <button type="button" class="btn btn-primary btn-sm">保存</button>
-            </div>
-          </div>
-        </div>
-      </div><!-- Modal -->
-      <!---->
+      <a v-for="nav in navs" :href="nav.url" target="_blank" class="btn btn-primary btn-sm m-1" role="button">{{nav.title}}</a>
     </div>
   </div>
 </div>
@@ -52,6 +18,8 @@
     var app = new Vue({
         el: '#app',
         data: {
+            navs:[],
+            editingNav:{},
             url:'',
             title:'',
             page: 0,
@@ -60,17 +28,38 @@
             messageShow:false
         },
         created: function() {
+            this.$http.post('/nav/list', {
+                subjectId:$('#subjectId').attr("subjectId"),
+            }, {emulateJSON: true}).then(response => {
+                console.log(response.body)
+                if(response.body.success) {
+                    this.messageShow = true;
+                    this.message = response.body.msg;
+                    this.navs = response.body.obj;
+                } else {
+                    this.messageShow = true;
+                    this.message = response.body.msg;
+                }
+            }, response => {
+                this.messageShow = false;
+                this.message = '网络异常'
+            });
         },
         methods: {
-            add: function () {
-                this.$http.post('/na', {
-                    page:pagenum,
-                    size:this.size
+            addNav: function () {
+                this.$http.post('/nav/add', {
+                    subjectId:$('#subjectId').attr("subjectId"),
+                    title:this.title,
+                    url:this.url
                 }, {emulateJSON: true}).then(response => {
+                    $('#newModal').modal('hide');
                     console.log(response.body)
                     if(response.body.success) {
                         this.messageShow = true;
                         this.message = response.body.msg;
+                        this.navs.push(response.body.obj);
+                        this.url = '';
+                        this.title = '';
                     } else {
                         this.messageShow = true;
                         this.message = response.body.msg;
