--- a/src/main/resources/templates/nav/edit.html
+++ b/src/main/resources/templates/nav/edit.html
@@ -16,15 +16,14 @@
           <span class="sr-only">Toggle Dropdown</span>
         </button>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">编辑</a>
-          <a class="dropdown-item" href="#">删除</a>
+          <a class="dropdown-item" href="#" data-toggle="modal" :data-target="'#editModal'+nav.id" @click="editNav(nav)">编辑</a>
+          <a class="dropdown-item" href="#" data-toggle="modal" :data-target="'#delModal'+nav.id">删除</a>
         </div>
       </div>
-      <!--<a v-for="nav in navs" :href="nav.url" target="_blank" class="btn btn-primary btn-sm m-1" role="button">{{nav.title}}</a>-->
       <div style="padding-bottom:15px;" v-for="nav in navs">
         <!-- Modal -->
         <div class="modal" :id="'delModal' + nav.id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
+          <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">删除导航</h5>
@@ -60,7 +59,7 @@
                   </div>
                   <div class="form-group">
                     <label for="message-text" class="col-form-label">导航URL:</label>
-                    <textarea class="form-control" v-model="editingNav.intro"></textarea>
+                    <textarea class="form-control" v-model="editingNav.url"></textarea>
                   </div>
                 </form>
               </div>
@@ -118,7 +117,7 @@
             page: 0,
             size: 2,
             message:'',
-            messageShow:false
+            messageShow:false,
         },
         created: function() {
             this.$http.post('/nav/list', {
@@ -162,19 +161,19 @@
                     this.message = '网络异常'
                 });
             },
-            del: function (subject) {
-                this.$http.post('/subject/del', {
-                    id: subject.id
+            delNav: function (obj) {
+                this.$http.post('/nav/del', {
+                    id: obj.id
                 }, {emulateJSON: true}).then(response => {
                     console.log(response.body)
                     if(response.body.success) {
                         this.messageShow = true;
                         this.message = response.body.msg;
-                        $('#delModal'+subject.id).modal('hide');
-                        var index = this.subjects.content.indexOf(subject);
-                        if (index !== -1) this.subjects.content.splice(index, 1);
-                        $('.alert').show();
-                        $('.alert').alert();
+                        $('#delModal'+obj.id).modal('hide');
+                        var index = this.navs.indexOf(obj);
+                        if (index !== -1) this.navs.splice(index, 1);
+                        // $('.alert').show();
+                        // $('.alert').alert();
                     } else {
                         this.messageShow = true;
                         this.message = response.body.msg;
@@ -185,14 +184,14 @@
                     this.message = '网络异常'
                 });
             },
-            editSubject: function (subject) {
-                this.editingSubject = subject;
+            editNav: function (obj) {
+                this.editingNav = obj;
             },
             saveEdit: function (subject) {
-                this.$http.post('/subject/saveEdit', {
-                    id: this.editingSubject.id,
-                    name:this.editingSubject.name,
-                    intro:this.editingSubject.intro
+                this.$http.post('/nav/saveEdit', {
+                    id:this.editingNav.id,
+                    title:this.editingNav.title,
+                    url:this.editingNav.url
                 }, {emulateJSON: true}).then(response => {
                     $('#editModal'+subject.id).modal('hide');
                     console.log(response.body)
