--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -8,7 +8,7 @@
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">主题-文章-文章列表</a>
-        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">添加文章</a>
+        <a href="/article/add" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">添加文章</a>
       </nav>
 
       <div style="padding-bottom:15px;padding-top:15px;">
