article CRUD is ok

--- a/src/main/resources/templates/article/add.html
+++ b/src/main/resources/templates/article/add.html
@@ -4,21 +4,29 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;">
+  <div class="row" id="app">
+    <div id="subjectId" th:attr="subjectId=${subjectId}" class="d-none"></div>
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">主题-文章-文章详情-只读模式</a>
-        <a href="/article/edit" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">编辑</a>
+        <a class="navbar-brand" href="#">主题-文章-文章详情-新建模式</a>
+        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;" @click="add">保存</a>
       </nav>
       <div style="padding-bottom:15px;padding-top:15px;">
-        <div class="row">
-          <div class="col-md-8 offset-md-2">
-            <h2 style="padding-bottom:10px;color: #666666;font-family: Palatino Linotype, Book Antiqua, Palatino, Helvetica, STKaiti, SimSun, serif;" class="border-bottom">AlphaGo Zero 和强人工智能</h2>
-            <div class="zhengwen mt-5">
-              <p class="text-justify"  style="font-size: 18px;line-height: 1.8;font-family: lucida grande, lucida sans unicode, lucida, helvetica, Hiragino Sans GB, Microsoft YaHei,WenQuanYi Micro Hei, sans-serif;, Arial, Helvetica, sans-serif ,simsun">
-                有些人虽然支持我，可是他们误解了我写书的目的。他们说我写书是要“证明自己”或者“实现自己的价值”，我觉得这些都是有失尊重的说法。他们说那些话的原因，是因为他们自己的觉悟没到位，所以没能理解我的境界和地位。只有地位低的人才需要向别人证明自己，才需要拿“硅谷”，“Google”一类的招牌来撑起自己的自信，才需要写一些“硅谷回忆录”来让别人瞧得起自己。我不一样的。由于我的地位，世界上没有任何人有资格来接受我的“证明”，所以我不需要向任何人证明自己，当然我更不需要向那些说我闲话的人，被洗脑的蠢人证明自己。
-              </p>
+        <div class="row" style="height:50px;">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 p-0">
+            <input class="form-control form-control-lg rounded-0" type="text" placeholder="输入标题..." v-model="title">
+          </div>
+        </div>
+        <br>
+        <div class="row" style="height:500px;">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 p-0">
+            <!--editor-->
+            <div id="editor">
+              <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="100" v-model="content"></textarea>
             </div>
+            <!--editor-->
           </div>
         </div>
       </div>
@@ -26,7 +34,39 @@
   </div>
 </div>
 <script>
-
+    var app = new Vue({
+        el: '#app',
+        data: {
+            title:'',
+            content:'',
+            message:'',
+            messageShow:false,
+        },
+        methods: {
+            add: function () {
+                this.$http.post('/article/add', {
+                    subjectId:$('#subjectId').attr("subjectId"),
+                    title:this.title,
+                    content:this.content
+                }, {emulateJSON: true}).then(response => {
+                    console.log(response.body)
+                    if(response.body.success) {
+                        this.messageShow = true;
+                        this.message = response.body.msg;
+                        this.content = '';
+                        this.title = '';
+                        window.location.href='/article/list/subject/'+$('#subjectId').attr("subjectId");
+                    } else {
+                        this.messageShow = true;
+                        this.message = response.body.msg;
+                    }
+                }, response => {
+                    this.messageShow = false;
+                    this.message = '网络异常'
+                });
+            }
+        }
+    })
 </script>
 </body>
 </html>
