--- a/src/main/resources/templates/article/edit.html
+++ b/src/main/resources/templates/article/edit.html
@@ -4,23 +4,27 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;">
+  <div id="articleId" th:attr="articleId=${articleId}" class="d-none"></div>
+  <div class="row" style="margin-top:150px;" id="app">
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">主题-文章-文章详情-编辑模式</a>
-        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">保存</a>
+        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;" @click="saveEdit">保存</a>
       </nav>
       <div style="padding-bottom:15px;padding-top:15px;">
         <div class="row" style="height:50px;">
-          <div class="col-md-8 offset-md-2">
-            <input class="form-control form-control-lg rounded-0" type="text" placeholder="输入标题...">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 p-0">
+            <input class="form-control form-control-lg rounded-0" type="text" placeholder="输入标题..." v-model="title">
           </div>
         </div>
-        <div class="row" style="height:500px;">
-          <div class="col-md-8 offset-md-2">
+        <br>
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8 p-0">
             <!--editor-->
             <div id="editor">
-              <p>Hello World!</p>
+              <textarea class="form-control rounded-0" id="exampleFormControlTextarea1" rows="100" v-model="content"></textarea>
             </div>
             <!--editor-->
           </div>
@@ -29,5 +33,59 @@
     </div>
   </div>
 </div>
+<script>
+    var app = new Vue({
+        el: '#app',
+        data: {
+            title:'',
+            content:'',
+            message:'',
+            messageShow:false,
+        },
+        created: function () {
+            this.$http.post('/article/info', {
+                id:$('#articleId').attr("articleId")
+            }, {emulateJSON: true}).then(response => {
+                console.log(response.body)
+                if(response.body.success) {
+                    this.messageShow = true;
+                    this.message = response.body.msg;
+                    this.content = response.body.obj.content;
+                    this.title = response.body.obj.title;
+                } else {
+                    this.messageShow = true;
+                    this.message = response.body.msg;
+                }
+            }, response => {
+                this.messageShow = false;
+                this.message = '网络异常'
+            });
+        },
+        methods: {
+            saveEdit: function () {
+                this.$http.post('/article/saveEdit', {
+                    id:$('#articleId').attr("articleId"),
+                    title:this.title,
+                    content:this.content
+                }, {emulateJSON: true}).then(response => {
+                    console.log(response.body)
+                    if(response.body.success) {
+                        this.messageShow = true;
+                        this.message = response.body.msg;
+                        this.content = '';
+                        this.title = '';
+                        window.location.href='/article/read/'+$('#articleId').attr("articleId");
+                    } else {
+                        this.messageShow = true;
+                        this.message = response.body.msg;
+                    }
+                }, response => {
+                    this.messageShow = false;
+                    this.message = '网络异常'
+                });
+            }
+        }
+    })
+</script>
 </body>
 </html>
