记录登录前想要访问的地址，登陆之后直接访问

--- a/src/main/resources/templates/user/signin.html
+++ b/src/main/resources/templates/user/signin.html
@@ -50,7 +50,11 @@ var app = new Vue({
             this.successShow = true;
             this.errorShow = false;
             this.message = response.body.msg;
-            window.location.href="/";
+            if(response.body.obj) {
+              window.location.href=response.body.obj;
+            } else {
+              window.location.href="/";
+            }
         } else {
             this.errorShow = true;
             this.successShow = false;
