--- a/src/main/resources/templates/cheat/read.html
+++ b/src/main/resources/templates/cheat/read.html
@@ -8,6 +8,7 @@
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">主题速查</a>
+        <a th:href="'/cheat/edit/subject/'+${subjectId}" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">进入编辑</a>
       </nav>
 
       <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-top">
@@ -16,130 +17,28 @@
             Building an App
           </div>
           <div class="card-body">
-            <div class="row">
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div><!--cardbody-end-->
-        </div><!--card-end-->
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0">
-            Building an App
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div><!--cardbody-end-->
-        </div><!--card-end-->
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0">
-            Building an App
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Cras justo odio</span>
+                <span>Cras justo odio</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Cras justo odio</span>
+                <span>Cras justo odio</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Cras justo odio</span>
+                <span>Cras justo odio</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Cras justo odio</span>
+                <span>Cras justo odio</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Cras justo odio</span>
+                <span>Cras justo odio</span>
+              </li>
+            </ul>
           </div><!--cardbody-end-->
         </div><!--card-end-->
       </div>
