--- a/src/main/resources/templates/cheat/edit.html
+++ b/src/main/resources/templates/cheat/edit.html
@@ -4,135 +4,250 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;">
+  <div class="row" style="margin-top:150px;" id="app">
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">主题速查</a>
-        <a href="#" class="btn btn-danger btn-sm">添加sheet</a>
+        <a class="navbar-brand" href="#" th:text="'主题速查（' + ${subject.name} + '）'" th:attr="subjectId=${subject.id}" id="subjectId">主题速查</a>
+        <a href="#" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#newModal">添加sheet</a>
       </nav>
 
       <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-top">
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">
+        <div v-for="cheat in cheats" class="card" style="width:360px;">
+          <div class="card-header border-bottom-0">
             Building an App
-            <div class="btn-group float-right" role="group" aria-label="Basic example">
-              <a href="#" class="btn btn-warning btn-sm">+左</a>
-              <a href="#" class="btn btn-warning btn-sm">+右</a>
+            <div class="btn-group float-right">
+              <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                设置
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#" data-toggle="modal" :data-target="'#delModal'+cheat.id">删除</a>
+                <a class="dropdown-item" href="#" data-toggle="modal" :data-target="'#editModal'+cheat.id" @click="edit(cheat);">编辑</a>
+              </div>
             </div>
           </div>
           <div class="card-body">
-            <div class="row">
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Cras justo odio</span>
+                <span>Cras justo odio</span>
+              </li>
+            </ul>
+          </div><!--cardbody-end-->
+
+          <!---->
+          <!-- delModal -->
+          <div class="modal" :id="'delModal' + cheat.id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">删除导航</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  确定删除该sheet吗？
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
+                  <button type="button" class="btn btn-primary btn-sm" @click="del(cheat)">确定</button>
+                </div>
               </div>
             </div>
-          </div><!--cardbody-end-->
-        </div><!--card-end-->
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">
-            Building an App
-            <div class="btn-group float-right" role="group" aria-label="Basic example">
-              <a href="#" class="btn btn-warning btn-sm">+左</a>
-              <a href="#" class="btn btn-warning btn-sm">+右</a>
+          </div><!-- Modal -->
+          <!-- editModal -->
+          <div class="modal fade" :id="'editModal' + cheat.id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">编辑导航</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="recipient-name" class="col-form-label">卡片正面:</label>
+                      <input type="text" class="form-control" v-model="editingCheat.question">
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">卡片反面:</label>
+                      <textarea class="form-control" v-model="editingCheat.answer"></textarea>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
+                  <button type="button" class="btn btn-primary btn-sm" @click="saveEdit(cheat)">保存</button>
+                </div>
+              </div>
+            </div>
+          </div><!-- Modal -->
+          <!---->
+         </div><!--card-end-->
+
+        <!---->
+        <!-- Modal -->
+        <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="">新建sheet</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">title:</label>
+                    <input type="text" class="form-control" id="recipient-name" v-model="title">
+                  </div>
+                  <div class="form-group">
+                    <label for="" class="col-form-label">key-value:</label>
+                    <!--<textarea class="form-control" id="message-text" v-model="content"></textarea>-->
+                  </div>
+                  <ul class="list-group">
+                    <li v-for="item in content" v-model="content" class="list-group-item d-flex justify-content-between align-items-center">
+                      <input type="text" class="form-control" v-model="item.key">
+                      <input type="text" class="form-control" v-model="item.value">
+                      <button type="button" class="btn btn-danger btn-md ml-1" v-if="content.length > 1" @click="removeItem(item)"><span class="oi oi-delete"></span></button>
+                    </li>
+                  </ul>
+                  <br>
+                  <button type="button" class="btn btn-primary btn-sm btn-block"  @click="addItem">添加key-value</button>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary btn-sm" @click="add">保存</button>
+              </div>
             </div>
           </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-sm">
-                <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Cras justo odio
-                    <span class="badge badge-primary badge-pill">14</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Dapibus ac facilisis in
-                    <span class="badge badge-primary badge-pill">2</span>
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    Morbi leo risus
-                    <span class="badge badge-primary badge-pill">1</span>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div><!--cardbody-end-->
-        </div><!--card-end-->
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">
-            Building an App
-            <div class="btn-group float-right" role="group" aria-label="Basic example">
-              <a href="#" class="btn btn-warning btn-sm">+左</a>
-              <a href="#" class="btn btn-warning btn-sm">+右</a>
-            </div>
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-sm">
-              </div>
-              <div class="col-sm">
-              </div>
-            </div>
-          </div><!--cardbody-end-->
-        </div><!--card-end-->
+        </div><!-- Modal -->
+        <!---->
+
       </div>
     </div>
   </div>
 </div>
 <script>
-
+  // Object.prototype.getKeyByValue = function( value ) {
+  //   for( var prop in this ) {
+  //     if( this.hasOwnProperty( prop ) ) {
+  //       if( this[ prop ] === value )
+  //         return prop;
+  //     }
+  //   }
+  // }
+  var app = new Vue({
+    el: '#app',
+    data: {
+      cheats:[],
+      editingCheat:{},
+      title:'',
+      content:[{'key':'aaa','value':'ccc'}],
+      message:'',
+      messageShow:false,
+    },
+    created: function() {
+      this.$http.post('/cheat/list', {
+        subjectId:$('#subjectId').attr("subjectId"),
+      }, {emulateJSON: true}).then(response => {
+        console.log(response.body)
+        if(response.body.success) {
+          this.messageShow = true;
+          this.message = response.body.msg;
+          this.cheats = response.body.obj;
+        } else {
+          this.messageShow = true;
+          this.message = response.body.msg;
+        }
+      }, response => {
+        this.messageShow = false;
+        this.message = '网络异常'
+      });
+    },
+    methods: {
+      addItem: function () {
+        this.content.push({"key":"","value":""});
+      },
+      removeItem: function (obj) {
+        var index = this.content.indexOf(obj);
+        if (index !== -1) this.content.splice(index, 1);
+      },
+      add: function () {
+        console.log(JSON.stringify(this.content))
+        return;
+        this.$http.post('/cheat/add', {
+          subjectId:$('#subjectId').attr("subjectId"),
+          title:this.title,
+          content:JSON.stringify(this.content)
+        }, {emulateJSON: true}).then(response => {
+          $('#newModal').modal('hide');
+          console.log(response.body)
+          if(response.body.success) {
+            this.messageShow = true;
+            this.message = response.body.msg;
+            this.cheats.push(response.body.obj);
+            this.title = '';
+            this.content = {};
+          } else {
+            this.messageShow = true;
+            this.message = response.body.msg;
+          }
+        }, response => {
+          this.messageShow = false;
+          this.message = '网络异常'
+        });
+      },
+      del: function (obj) {
+        this.$http.post('/cheat/del', {
+          id: obj.id
+        }, {emulateJSON: true}).then(response => {
+          console.log(response.body)
+          if(response.body.success) {
+            this.messageShow = true;
+            this.message = response.body.msg;
+            $('#delModal'+obj.id).modal('hide');
+            var index = this.cheats.indexOf(obj);
+            if (index !== -1) this.cheats.splice(index, 1);
+          } else {
+            this.messageShow = true;
+            this.message = response.body.msg;
+          }
+        }, response => {
+          this.messageShow = true;
+          this.message = '网络异常'
+        });
+      },
+      edit: function (obj) {
+        this.editingCheat = obj;
+      },
+      saveEdit: function (cheat) {
+        this.$http.post('/chaet/saveEdit', {
+          id:this.editingCheat.id,
+          title:this.editingCheat.title,
+          content:JSON.stringify(this.editingCheat.content)
+        }, {emulateJSON: true}).then(response => {
+          $('#editModal'+cheat.id).modal('hide');
+          console.log(response.body)
+          if(response.body.success) {
+            this.messageShow = true;
+            this.message = response.body.msg;
+          } else {
+            this.messageShow = true;
+            this.message = response.body.msg;
+          }
+        }, response => {
+          this.errorShow = true;
+          this.successShow = false;
+          this.message = '网络异常'
+        });
+      }
+    }
+  })
 </script>
 </body>
 </html>
