--- a/src/main/resources/templates/cheat/read.html
+++ b/src/main/resources/templates/cheat/read.html
@@ -7,34 +7,17 @@
   <div class="row" style="margin-top:150px;">
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">主题速查</a>
+        <a class="navbar-brand" href="#" th:text="'主题速查（' + ${subject.name} + '）'" th:attr="subjectId=${subject.id}" id="subjectId">主题速查</a>
         <a th:href="'/cheat/edit/subject/'+${subjectId}" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">进入编辑</a>
       </nav>
-
       <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-top">
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0">
+        <div class="card text-center" style="width:360px;" th:each="cheat:${cheatSheets}">
+          <div class="card-header bg-primary text-white border-bottom-0" th:text="${cheat.title}">
             Building an App
           </div>
           <div class="card-body">
             <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Cras justo odio</span>
-                <span>Cras justo odio</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Cras justo odio</span>
-                <span>Cras justo odio</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Cras justo odio</span>
-                <span>Cras justo odio</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>Cras justo odio</span>
-                <span>Cras justo odio</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
+              <li th:each="item:${cheat.content}" class="list-group-item d-flex justify-content-between align-items-center">
                 <span>Cras justo odio</span>
                 <span>Cras justo odio</span>
               </li>
@@ -45,8 +28,5 @@
     </div>
   </div>
 </div>
-<script>
-
-</script>
 </body>
 </html>
