--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -18,7 +18,7 @@
           <h5 class="card-title">{{subject.name}}</h5>
           <p class="card-text">{{subject.intro}}</p>
           <a :href="'/nav/read/subject/'+subject.id" class="btn btn-warning btn-sm">导航</a>
-          <a href="/cheat/read" class="btn btn-warning btn-sm">速查</a>
+          <a :href="'/cheat/read/subject/'+subject.id" class="btn btn-warning btn-sm">速查</a>
           <a :href="'/card/read/subject/'+subject.id" class="btn btn-warning btn-sm">卡片</a>
           <a :href="'/article/list/subject/'+subject.id" class="btn btn-warning btn-sm">文章</a>
           <div class="btn-group float-right">
